# mars-protocol

./: .gitignore  Cargo.toml  PROTOCOL.md  README.md
bridges/mcp/: README.md  pyproject.toml
bridges/mcp/src/mesh_mcp_bridge/: __init__.py  bridge.py  cli.py  publisher.py  server.py
bridges/openapi/: README.md  openapi_bridge.py
bridges/petals/: README.md  petals_bridge.py
deploy/: Dockerfile  fleet-deploy.sh  mesh-hub.service  setup-hetzner.sh  setup-node.sh
deploy/providers/: digitalocean.sh  hetzner.sh  vultr.sh
docs/: PLAN-01-mesh-hub.md  PLAN-03-block0-wire-protocol.md  PLAN-04-block1-peering-and-hardening.md  PLAN-05-block2-multi-tenant.md  PLAN-06-block3-observability.md  PLAN-07-block4-hardening.md  architecture-context.md  architecture-payments.md  getting-started.md  operator-guide.md  relay-protocol-research.md  research-dht-pubsub-notifications.md  research-hub-node-architecture.md  research-timestamp-validation.md  review-findings-status.md  review-prompts.md  senior-engineer-review-mesh-protocol-2026-03-22.md  session-resume-2026-03-22.md
docs/private/: PLAN-02-purposebot-hub.md  hub-payment-implementation.md
docs/reviews/: cryptography-review-2026-03-23.md  interoperability-spec-ambiguity-review-2026-03-23.md  security-hardening-review-2026-03-23.md
examples/: agent-discover.sh  agent-publish.sh  hub.toml  node-relay.sh  test_vectors.rs
mesh-client/: Cargo.toml
mesh-client/examples/: publish_and_discover.rs
mesh-client/src/: lib.rs
mesh-core/: Cargo.toml
mesh-core/src/: descriptor.rs  error.rs  frame.rs  hash.rs  identity.rs  lib.rs  message.rs  routing.rs  schema.rs
mesh-dht/: Cargo.toml
mesh-dht/src/: distance.rs  hooks.rs  lib.rs  node.rs  routing.rs  storage.rs  transport.rs
mesh-gateway/: Cargo.toml
mesh-gateway/src/: main.rs
mesh-hub/: Cargo.toml
mesh-hub/src/: admin.rs  auth.rs  config.rs  hooks.rs  lib.rs  main.rs  metrics.rs  network.rs  peering.rs  policy.rs  rate_limit.rs  seeding.rs  tenant.rs
mesh-hub/src/storage/: mod.rs  redb.rs
mesh-hub/tests/: load_tests.rs  rate_limit_tests.rs  security_tests.rs  tenant_tests.rs
mesh-hub/tests/common/: mod.rs
mesh-node/: Cargo.toml
mesh-node/src/: main.rs  transport.rs
mesh-node/tests/: integration.rs
mesh-schemas/: Cargo.toml
mesh-schemas/src/: lib.rs
mesh-transport/: Cargo.toml
mesh-transport/src/: connection.rs  endpoint.rs  error.rs  lib.rs  tests.rs  tls.rs
sdks/mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
sdks/mcp-server/src/: index.ts
sdks/python/: README.md  pyproject.toml
sdks/python/src/mesh_protocol/: __init__.py  client.py  payments.py
sdks/python/tests/: test_client.py
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript/src/: index.ts
tools/demo/: cowork-30sec-demo.md  cowork-prompt.md  cowork-viral-demo.md  demo.py  demo.tape
tools/demo-video/: package-lock.json  package.json  tsconfig.json
tools/demo-video/src/: MarsDemo.tsx  MiniTerminal.tsx  Root.tsx  Terminal.tsx
tools/gpu-provider/: MONETIZE.md  README.md  provider.py
tools/seed-network/: README.md  github-issue-template.md  reseed.sh  seed-data-ap-southeast.json  seed-data-eu-central.json  seed-data-us-east.json  seed-data-us-west.json  seed-data.json  seed.py
tools/seed-network/sources/: inference_providers.py  llm_endpoints.py  mcp_skills.py  public_apis.py  startups.py
