[package]
name = "mesh-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level client library for the Capability Mesh Protocol"
keywords = ["mesh", "dht", "p2p", "capability-discovery", "agents"]
categories = ["network-programming", "cryptography"]
repository = "https://github.com/mellowmarshall/mars-protocol"

[dependencies]
mesh-core = { path = "../mesh-core", version = "0.1.0" }
mesh-dht = { path = "../mesh-dht", version = "0.1.0" }
mesh-transport = { path = "../mesh-transport", version = "0.1.0" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
tokio = { workspace = true }
