[package]
name = "mesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire types, CBOR serialization, Ed25519 identity, and content-addressed hashing for the MARS protocol"
readme = "../README.md"

[dependencies]
ciborium = { workspace = true }
ciborium-io = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
