[package]
name = "mesh-dht"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kademlia DHT with iterative lookup and descriptor storage for the MARS protocol"

[dependencies]
mesh-core = { path = "../mesh-core", version = "0.1.0" }
mesh-transport = { path = "../mesh-transport", version = "0.1.0" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
