[package]
name = "mesh-gateway"
version.workspace = true
edition.workspace = true
description = "HTTP/JSON gateway for the Capability Mesh Protocol"

[[bin]]
name = "mesh-gateway"
path = "src/main.rs"

[dependencies]
mesh-core = { path = "../mesh-core", version = "0.1.0" }
mars-client = { path = "../mesh-client", version = "0.1.0" }

axum = "0.8"
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
