[package]
name = "mesh-node"
version.workspace = true
edition.workspace = true

[dependencies]
mesh-core = { path = "../mesh-core" }
mesh-transport = { path = "../mesh-transport" }
mesh-dht = { path = "../mesh-dht" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
