[package]
name = "mesh-node"
version.workspace = true
edition.workspace = true

[dependencies]
mesh-core = { path = "../mesh-core", version = "0.1.1" }
mesh-transport = { path = "../mesh-transport", version = "0.1.1" }
mesh-dht = { path = "../mesh-dht", version = "0.1.1" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1"
ciborium = { workspace = true }
hex = { workspace = true }
anyhow = "1.0.102"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
