[package]
name = "mesh-schemas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Well-known schema hashes and routing key constants for the MARS protocol"
readme = "../README.md"

[dependencies]
mesh-core = { path = "../mesh-core", version = "0.1.1" }
