[package]
name = "mesh-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "QUIC transport with mutual TLS for the MARS protocol"

[dependencies]
mesh-core = { path = "../mesh-core", version = "0.1.0" }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
